# feedback

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
example/: manage.py
example/example_project/: settings.py  urls.py  wsgi.py
example/templates/: home.html  login.html
feedback_widget/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py
feedback_widget/migrations/: 0001_initial.py
feedback_widget/templates/feedback_widget/: admin_detail.html  admin_list.html  widget.html
